# scherlok

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_connector.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ROADMAP.md  VISION.md
examples/: README.md  demo.cast  demo.sh  docker-compose.yml  seed.sql
examples/dbt_smoke/: .gitignore  README.md  dbt_project.yml  profiles.yml
src/scherlok/: __init__.py  cli.py  config.py  output.py  service.py
src/scherlok/alerter/: __init__.py  console.py  email.py  exitcode.py  slack.py  webhook.py
src/scherlok/connectors/: __init__.py  base.py  bigquery.py  duckdb.py  mysql.py  postgres.py  snowflake.py
src/scherlok/dashboard/: README.md  __init__.py  assembler.py  grouping.py  render.py  schema_parser.py  styles.css  template.html
src/scherlok/dbt/: README.md  __init__.py  lineage.py  manifest.py  profiles.py
tests/: test_alerter.py  test_bigquery.py  test_cli.py  test_config.py  test_connector.py  test_connector_errors.py  test_dashboard_assembler.py  test_dashboard_cli.py  test_dashboard_grouping.py  test_dashboard_render.py  test_dashboard_schema_parser.py  test_dbt_cli.py  test_dbt_lineage.py  test_dbt_manifest.py  test_dbt_profiles.py  test_dbt_run_and_watch.py  test_detector.py  test_duckdb.py  test_email.py  test_mcp_server.py  test_mysql.py  test_output.py  test_postgres.py  test_profiler.py  test_snowflake.py  test_store.py  test_webhook.py
(+27 files in other folders)
