[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scherlok"
version = "0.3.0"
description = "A detective for your data. Zero-config data quality monitoring."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Robson Bayer Müller", email = "rbmuller91@gmail.com" },
]
keywords = ["data-quality", "monitoring", "anomaly-detection", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
scherlok = "scherlok.cli:app"

[project.urls]
Homepage = "https://github.com/rbmuller/scherlok"
Repository = "https://github.com/rbmuller/scherlok"
Issues = "https://github.com/rbmuller/scherlok/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
